add:  - coroutines  - api requests  - change layout for photo card

--- a/app/src/main/res/layout/view_item_photo.xml
+++ b/app/src/main/res/layout/view_item_photo.xml
@@ -12,6 +12,7 @@
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
+        android:scaleType="centerCrop"
         android:layout_height="match_parent"
         android:layout_above="@id/titleText"
         tools:background="@android:color/holo_orange_light"/>
@@ -22,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:padding="@dimen/spacing"
+        android:visibility="gone"
         android:textColor="@android:color/black"
         tools:text="A man drinking a coffee."/>
 </RelativeLayout>
