--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,11 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+
+    <style name="Main.Theme" parent="AppTheme"/>
+
+    <style name="AppTheme.Toolbar" parent="@style/ThemeOverlay.AppCompat.Dark">
+        <item name="android:textColorSecondary">@android:color/white</item>
+    </style>
+
 </resources>
