--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,9 @@
         <item name="android:textColorSecondary">@android:color/white</item>
     </style>
 
+    <style name="Text">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:padding">@dimen/spacing</item>
+        <item name="android:textSize">@dimen/text.large</item>
+    </style>
 </resources>
