change:  - ui on screen with single photo (Bottom Sheet)

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,12 @@
         <item name="android:padding">@dimen/spacing</item>
         <item name="android:textSize">@dimen/text.large</item>
     </style>
+
+    <style name="BottomSheetDialog" parent="Theme.Design.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/bottomSheetStyleWrapper</item>
+    </style>
+
+    <style name="bottomSheetStyleWrapper" parent="Widget.Design.BottomSheet.Modal">
+        <item name="behavior_peekHeight">@dimen/spacing_x7</item>
+    </style>
 </resources>
