--- a/app/src/main/res/menu/menu_photo.xml
+++ b/app/src/main/res/menu/menu_photo.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/itemWallpaper"
         android:title="@string/set_wallpaper"
-        app:showAsAction="never"/>
+        app:showAsAction=""/>
 
     <item
         android:id="@+id/itemDownloader"
