--- a/app/src/main/res/layout/view_bottom_sheet_info.xml
+++ b/app/src/main/res/layout/view_bottom_sheet_info.xml
@@ -26,6 +26,9 @@
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:focusable="true"
+        android:textColor="@android:color/holo_blue_bright"
         app:layout_constraintBottom_toBottomOf="@+id/userTitle"
         app:layout_constraintStart_toEndOf="@+id/userTitle"
         app:layout_constraintTop_toTopOf="@+id/userTitle"
