--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,8 @@
 
     <style name="AppTheme.Toolbar" parent="@style/ThemeOverlay.AppCompat.Dark">
         <item name="android:textColorSecondary">@android:color/white</item>
+        <item name="android:textColor">@android:color/white</item>
+        <!--<item name="app:iconTint">@android:color/white</item>-->
     </style>
 
     <style name="Text">
