--- a/app/src/main/res/layout/view_bottom_sheet_info.xml
+++ b/app/src/main/res/layout/view_bottom_sheet_info.xml
@@ -5,10 +5,11 @@
     android:id="@+id/layoutBottom"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/shape"
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
+    android:paddingTop="@dimen/spacing"
     app:behavior_peekHeight="@dimen/spacing_x7"
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
@@ -17,6 +18,8 @@
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacing"
+        android:layout_marginStart="@dimen/spacing"
         android:text="@string/instagram"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
@@ -39,6 +42,8 @@
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacing"
+        android:layout_marginStart="@dimen/spacing"
         android:text="@string/width"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userText"/>
@@ -58,6 +63,8 @@
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacing"
+        android:layout_marginStart="@dimen/spacing"
         android:text="@string/height"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/widthTitle"/>
@@ -77,6 +84,8 @@
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacing"
+        android:layout_marginStart="@dimen/spacing"
         android:text="@string/location"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/heightTitle"/>
@@ -96,6 +105,8 @@
         style="@style/Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacing"
+        android:layout_marginStart="@dimen/spacing"
         android:text="@string/views"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/locationTitle"/>
@@ -114,6 +125,8 @@
         android:id="@+id/likesView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacing"
+        android:layout_marginStart="@dimen/spacing"
         android:padding="@dimen/spacing"
         android:src="@drawable/svg_like"
         app:layout_constraintStart_toStartOf="parent"
@@ -133,6 +146,8 @@
         android:id="@+id/downloadsView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/spacing"
+        android:layout_marginStart="@dimen/spacing"
         android:padding="@dimen/spacing"
         android:src="@drawable/svg_download"
         app:layout_constraintStart_toStartOf="parent"
@@ -154,7 +169,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/svg_wallpaper"
-        android:foreground="?selectableItemBackground"
         android:text="@string/set_as"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toStartOf="@+id/downloadButton"
@@ -168,7 +182,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/svg_download"
-        android:foreground="?selectableItemBackgroundBorderless"
         android:text="@string/download"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
